Update Open Graph and Twitter URLs, and fix favicon links to use absolute paths

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yourdomain.com/" />
+    <meta property="og:url" content="https://tds.ochis.ro" />
     <meta property="og:title" content="Evaluarea Darurilor Spirituale" />
     <meta
       property="og:description"
@@ -35,7 +35,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://yourdomain.com/" />
+    <meta property="twitter:url" content="https://tds.ochis.ro" />
     <meta property="twitter:title" content="Evaluarea Darurilor Spirituale" />
     <meta
       property="twitter:description"
@@ -44,13 +44,31 @@
     <meta property="twitter:image" content="assets/images/og-image.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="assets/images/icon.svg" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://tds.ochis.ro/assets/images/icon.svg"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://tds.ochis.ro/assets/images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://tds.ochis.ro/assets/images/favicon-16x16.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://tds.ochis.ro/assets/images/apple-touch-icon.png"
+    />
 
     <!-- Manifest -->
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="https://tds.ochis.ro/manifest.json" />
 
     <title>Evaluarea Darurilor Spirituale</title>
     <link rel="stylesheet" href="assets/css/style.css" />
