Enhance navigation by adding link to nav title and improving link styles

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
       <!-- Navigation Bar -->
       <nav id="navbar" class="navbar">
         <div class="nav-content">
-          <h1 class="nav-title">Daruri Spirituale</h1>
+          <a href="#/" class="nav-title-link">
+            <h1 class="nav-title">Daruri Spirituale</h1>
+          </a>
           <button id="menuBtn" class="menu-btn" aria-label="Meniu">
             <span></span>
             <span></span>
@@ -230,7 +232,7 @@
         </div>
 
         <div class="scale-info">
-          <h3>Scala de răspuns:</h3>
+          <h3>Răspunde la afirmații cu</h3>
           <div class="scale-items">
             <div class="scale-item">
               <span class="scale-value">3</span>
