--- a/index.html
+++ b/index.html
@@ -192,6 +192,22 @@
 
       <!-- Overlay for menu -->
       <div id="overlay" class="overlay"></div>
+
+      <!-- Back to Top Button -->
+      <button id="backToTop" class="back-to-top" aria-label="Înapoi sus">
+        <svg
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2.5"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <polyline points="18 15 12 9 6 15"></polyline>
+        </svg>
+      </button>
     </div>
 
     <!-- Templates -->
