--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://tds.ochis.ro" />
+    <meta property="og:url" content="https://tds.ochis.ro/" />
     <meta property="og:title" content="Evaluarea Darurilor Spirituale" />
     <meta
       property="og:description"
       content="Descoperă-ți darurile spirituale printr-un chestionar complet cu 133 de întrebări. Identifică cele 19 daruri spirituale și află cum te-a înzestrat Dumnezeu pentru slujire."
     />
-    <meta property="og:image" content="assets/images/og-image.png" />
+    <meta
+      property="og:image"
+      content="https://tds.ochis.ro/assets/images/og-image.png"
+    />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta
@@ -35,43 +38,42 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://tds.ochis.ro" />
+    <meta property="twitter:url" content="https://tds.ochis.ro/" />
     <meta property="twitter:title" content="Evaluarea Darurilor Spirituale" />
     <meta
       property="twitter:description"
       content="Descoperă-ți darurile spirituale printr-un chestionar complet cu 133 de întrebări."
     />
-    <meta property="twitter:image" content="assets/images/og-image.png" />
+    <meta
+      property="twitter:image"
+      content="https://tds.ochis.ro/assets/images/og-image.png"
+    />
 
     <!-- Favicon -->
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="https://tds.ochis.ro/assets/images/icon.svg"
-    />
+    <link rel="icon" type="image/svg+xml" href="/assets/images/icon.svg" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="https://tds.ochis.ro/assets/images/favicon-32x32.png"
+      href="/assets/images/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="https://tds.ochis.ro/assets/images/favicon-16x16.png"
+      href="/assets/images/favicon-16x16.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="https://tds.ochis.ro/assets/images/apple-touch-icon.png"
+      href="/assets/images/apple-touch-icon.png"
     />
 
     <!-- Manifest -->
-    <link rel="manifest" href="https://tds.ochis.ro/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
 
     <title>Evaluarea Darurilor Spirituale</title>
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
   <body>
     <!-- App Container -->
@@ -294,7 +296,9 @@
             Pagina <span id="currentPage">1</span> din
             <span id="totalPages">10</span>
           </h2>
-          <p class="quiz-subtitle">Răspunde sincer la fiecare afirmație</p>
+          <p id="quizMotivation" class="quiz-subtitle">
+            Răspunde sincer la fiecare afirmație
+          </p>
         </div>
 
         <div id="questionsContainer" class="questions-container">
