Add gift references display in the gift card template and enhance CSS styles for better presentation

--- a/index.html
+++ b/index.html
@@ -501,6 +501,9 @@
           <h3 class="gift-name">{name}</h3>
         </div>
         <p class="gift-description">{description}</p>
+        <div class="gift-references">
+          {references}
+        </div>
       </div>
     </template>
 
