--- a/index.html
+++ b/index.html
@@ -501,9 +501,7 @@
           <h3 class="gift-name">{name}</h3>
         </div>
         <p class="gift-description">{description}</p>
-        <div class="gift-references">
-          {references}
-        </div>
+        <div class="gift-references">{references}</div>
       </div>
     </template>
 
